--- a/src/main/resources/templates/bookManagePage.html
+++ b/src/main/resources/templates/bookManagePage.html
@@ -72,6 +72,7 @@
         <div style="text-align: center; margin-top: 20px">
             <button v-on:click="addBook" class="btn btn-warning" style="width: 30%;" th:text="#{load}"></button>
         </div>
+        <h1 class="alert alert-warning" v-show="error" th:text="#{incorrect.data}"></h1>
     </div>
     <!--    edit or delete-->
     <div v-else>
@@ -190,7 +191,8 @@
             authors: [],
             message: null,
             page: 0,
-            siteName: 'e-lib'
+            siteName: 'e-lib',
+            error: false
         },
         async mounted() {
             await this.getBooks();
@@ -199,12 +201,10 @@
         },
         methods: {
             async addBook() {
+                this.error = false;
                 let res = await axios.post('/add', this.addedBook)
-                    .catch(function (error) {
-                        if (error.response) {
-                            if(error.response.status == '404')
-                                return;//todo show field with this problem
-                        }
+                    .catch((error) => {
+                        this.error = true;
                     });
             },
             async changeList() {
@@ -246,11 +246,11 @@
             async editBook(book) {
                 let res = await axios.put('/edit', book)
                     .catch(function (error) {
-                    if (error.response) {
-                        if(error.response.status == '404')
-                            return;//todo show field with this problem
-                    }
-                });
+                        if (error.response) {
+                            if (error.response.status == '404')
+                                return;//todo show field with this problem
+                        }
+                    });
                 if (!res) return;
                 this.message = res.data + book.name;
                 this.page = 0;
@@ -260,7 +260,7 @@
                 let res = await axios.delete('/delete/' + book.id)
                     .catch(function (error) {
                         if (error.response) {
-                            if(error.response.status == '404')
+                            if (error.response.status == '404')
                                 return;//todo show field with this problem
                         }
                     });
