remove 'custom' success handler

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -19,27 +19,9 @@
                      th:text="#{label.lang.ua}"></a></span>
             <span><a style="float: right; margin-right: 5px" href="/?language=en"
                      th:text="#{label.lang.en}"></a></span>
-            <!--            admin-->
-            <div v-if="user==1">
-
-                <span><a style="float: right; margin-right: 5px" href="/logout" th:text="#{logout}"></a></span>
-                <span><a style="float: right; margin-right: 5px" href="/book" th:text="#{books}"></a></span>
-                <span><a style="float: right; margin-right: 5px" href="/orders" th:text="#{orders}"></a></span>
-                <span><a style="float: right; margin-right: 5px" href="/" th:text="#{main}"></a></span>
-            </div>
-            <!--            user-->
-            <div v-else-if="user==2">
-                <span><a style="float: right; margin-right: 5px" href="/logout" th:text="#{logout}"></a></span>
-                <span><a style="float: right; margin-right: 5px" href="/user" th:text="#{my.books}"></a></span>
-                <span><a style="float: right; margin-right: 5px" href="/prospectus" th:text="#{prospectus}"></a></span>
-                <span><a style="float: right; margin-right: 5px" href="/" th:text="#{main}"></a></span>
-            </div>
-            <!--            guest-->
-            <div v-else>
-                <span><a style="float: right; margin-right: 5px" href="/login" th:text="#{sign.in}"></a></span>
-                <span><a style="float: right; margin-right: 5px" href="/reg" th:text="#{sign.up}"></a></span>
-                <span><a style="float: right; margin-right: 5px" href="/" th:text="#{main}"></a></span>
-            </div>
+            <span><a style="float: right; margin-right: 5px" href="/login" th:text="#{sign.in}"></a></span>
+            <span><a style="float: right; margin-right: 5px" href="/reg" th:text="#{sign.up}"></a></span>
+            <span><a style="float: right; margin-right: 5px" href="/" th:text="#{main}"></a></span>
         </div>
     </header>
 </div>
@@ -47,20 +29,11 @@
     let app = new Vue({
         el: '#app',
         data: {
-            user: 3,
             siteName: 'e-lib',
         },
         async mounted() {
-            await this.getAuthorities();
         },
-        methods: {
-            async getAuthorities() {
-                let res = await axios.get('/authorities');
-                if (!res) return;
-                this.user = res.data;
-                console.log(this.user);
-            }
-        }
+        methods: {}
     });
 </script>
 </body>
