--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -25,21 +25,21 @@
         </div>
     </header>
     <div style="margin:0 auto;width:75%;text-align:left">
-        <p class="h3 text-center mb-4"th:text="#{sign.up}"></p>
+        <p class="h3 text-center mb-4" th:text="#{sign.up}"></p>
         <!--/*@thymesVar id="user" type="extclasses.final_project_spring.dto.UserDTO"*/-->
         <form action="#" th:action="@{/reg}" th:object="${user}" method="post" style="max-width: 500px; margin: auto;">
             <input class="form-control" type="text" th:placeholder="#{username}" th:field="*{username}">
-            <p th:each="error: ${#fields.errors('username')}"
+            <p class="alert alert-warning" th:each="error: ${#fields.errors('username')}"
                th:text="${error}">Validation error</p>
             <input id="phone" class="form-control" type="text" th:placeholder="#{phone}" th:field="*{phone}">
             <p th:each="error: ${#fields.errors('phone')}"
-               th:text="${error}">Validation error</p>
+               th:text="${error}" class="alert alert-warning">Validation error</p>
             <input type="email" class="form-control" th:placeholder="#{email}" th:field="*{email}">
             <p th:each="error: ${#fields.errors('email')}"
-               th:text="${error}">Validation error</p>
+               th:text="${error}" class="alert alert-warning">Validation error</p>
             <input type="password" class="form-control" th:placeholder="#{password}" th:field="*{password}">
             <p th:each="error: ${#fields.errors('password')}"
-               th:text="${error}">Validation error</p>
+               th:text="${error}" class="alert alert-warning">Validation error</p>
             <div style="text-align: center; margin-top: 20px">
                 <input class="btn btn-warning" type="submit" name="submit" th:value="#{submit}">
             </div>
