--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,16 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <body style="text-align:center">
 <div id="app">
-    <header>
-        <div class="navbar navbar-default" style="background-color: aquamarine;">
-            <h1 style="float: left">{{ siteName }}</h1>
-            <span><a style="float: right; margin-right: 5px" href="/login?language=ua" th:text = "#{label.lang.ua}"></a></span>
-            <span><a style="float: right; margin-right: 5px" href="/login?language=en" th:text = "#{label.lang.en}"></a></span>
-            <span><a style="float: right; margin-right: 5px" href="/login" th:text = "#{sign.in}"></a></span>
-            <span><a style="float: right; margin-right: 5px" href="/reg" th:text = "#{sign.up}"></a></span>
-            <span><a style="float: right; margin-right: 5px" href="/" th:text = "#{main}"></a></span>
-        </div>
-    </header>
+    <div th:replace="fragments/guest-header :: header">...</div>
     <div style="margin:0 auto;width:75%;text-align:left">
         <p class="h3 text-center mb-4" th:text = "#{sign.in}"></p>
         <form action="login" method="post" style="max-width: 500px; margin: auto;">
