add returning success messages in front-end

--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -94,9 +94,12 @@
             },
             async permitOrder(order) {
                 let res = await axios.put('/permit', order)
+                    .then((response) => {
+                        alert(response.data.message);
+                    })
                     .catch((error) => {
                         alert(error.response.data.error);
-                    });//todo add alerting in all successful operation
+                    });
                 if (!res) return;
                 await this.getActiveOrders();
                 await this.getPassiveOrders();
