--- a/src/main/resources/templates/bookManagePage.html
+++ b/src/main/resources/templates/bookManagePage.html
@@ -183,6 +183,9 @@
         methods: {
             async addBook() {
                 await axios.post('/add', this.addedBook)
+                    .then((response) => {
+                        alert(response.data.message);
+                    })
                     .catch((error) => {
                         alert(error.response.data.error);
                     });
@@ -224,6 +227,9 @@
             },
             async editBook(book) {
                 let res = await axios.put('/edit', book)
+                    .then((response) => {
+                        alert(response.data.message);
+                    })
                     .catch((error) => {
                         alert(error.response.data.error);
                     });
@@ -233,6 +239,9 @@
             },
             async deleteBook(book) {
                 let res = await axios.delete('/delete/' + book.id)
+                    .then((response) => {
+                        alert(response.data.message);
+                    })
                     .catch((error) => {
                         alert(error.response.data.error);
                     });
