--- a/src/main/resources/templates/prospectus.html
+++ b/src/main/resources/templates/prospectus.html
@@ -120,7 +120,7 @@
                 this.filter = true;
                 await this.loadByFilter();
             },
-            async loadByFilter() {
+            async loadByFilter() {//todo
                 let filter = {
                     tags: this.addedTags,
                     authors: this.addedAuthors,
@@ -155,6 +155,9 @@
             },
             async orderBook(book) {
                 let res = await axios.post('/order', book)
+                    .then((response) => {
+                        alert(response.data.message);
+                    })
                     .catch((error) => {
                         alert(error.response.data.error);
                     });
