--- a/src/main/resources/templates/fragments/guest-header.html
+++ b/src/main/resources/templates/fragments/guest-header.html
@@ -14,7 +14,7 @@
 <body>
 <header>
     <div class="navbar navbar-default" style="background-color: aquamarine;">
-        <h1 style="float: left">{{ siteName }}</h1>
+        <h1 style="float: left"th:text="#{site.name}"></h1>
         <span><a style="float: right; margin-right: 5px" href="/?language=ua"
                  th:text="#{label.lang.ua}"></a></span>
         <span><a style="float: right; margin-right: 5px" href="/?language=en"
