--- a/src/main/resources/templates/bookManagePage.html
+++ b/src/main/resources/templates/bookManagePage.html
@@ -150,11 +150,8 @@
         <button class="btn btn-warning" style="width: 30%;" @click="loadMore()" th:text="#{load.more}">
         </button>
     </div>
+    <div th:replace="fragments/footer :: footer">...</div>
 </div>
-</div>
-</div>
-</div>
-
 <script type="text/javascript">
     let app = new Vue({
         el: '#app',
