--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -13,6 +13,7 @@
 <body style="text-align: center">
 <div id="app">
     <div th:replace="fragments/guest-header :: header">...</div>
+    <div th:replace="fragments/footer :: footer">...</div>
 </div>
 <script type="text/javascript">
     let app = new Vue({
