--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -67,6 +67,7 @@
             </tbody>
         </table>
     </div>
+    <div th:replace="fragments/footer :: footer">...</div>
 </div>
 <script type="text/javascript">
     let app = new Vue({
