--- a/src/main/resources/templates/prospectus.html
+++ b/src/main/resources/templates/prospectus.html
@@ -91,9 +91,7 @@
         <button class="btn btn-warning" style="width: 30%;" @click="loadMore()" th:text="#{load.more}">
         </button>
     </main>
-    <!--    <footer>-->
-    <!--        {{ new Date().getFullYear() }} — <strong>e-lib</strong>-->
-    <!--    </footer>-->
+    <div th:replace="fragments/footer :: footer">...</div>
 </div>
 <script type="text/javascript">
     let app = new Vue({
