--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -34,15 +34,12 @@
             </div>
         </form>
     </div>
-    <footer>
-        {{ new Date().getFullYear() }} — <strong>e-lib</strong>
-    </footer>
+    <div th:replace="fragments/footer :: footer">...</div>
 </div>
 <script type="text/javascript">
     let app = new Vue({
         el: '#app',
-        data: {
-        },
+        data: {},
     })
 </script>
 <style lang="less">
