--- a/src/main/resources/templates/bookManagePage.html
+++ b/src/main/resources/templates/bookManagePage.html
@@ -60,44 +60,7 @@
     <!--    edit or delete-->
     <div v-else>
         <!--        filter-->
-        <div class="w3-sidebar w3-light-grey w3-bar-block"
-             style="width:17%; float: left; padding-top: 10%; background-color: lightgrey;">
-            <!--            name-->
-            <div>
-                <input id="partOfName" class="form-control" type="text" v-model="partOfName">
-                <label for="partOfName" th:text="#{part.of.name}"></label>
-            </div>
-            <br>
-            <!--            tags-->
-            <div id="tagsCheckbox" class="col-md-6 boxes">
-                <div v-for="tag in tags">
-                    <div style="display: inline;">
-                        <input style="display: inline; float: left; margin-left: 0px" type="checkbox"
-                               v-bind:value="tag"
-                               v-model="addedTags">
-                        <h6 style="display: inline; margin-right: 0px;">{{tag}}</h6>
-                    </div>
-                </div>
-            </div>
-            <br>
-            <label for="tagsCheckbox" style="margin: 20px ;" th:text="#{select.tags}"></label>
-            <br>
-            <!--            authors-->
-            <div style="padding-top: 10px" id="authorsCheckbox" class="col-md-6 boxes">
-                <div v-for="author in authors">
-                    <div style="display: inline;">
-                        <input style="display: inline; float: left; margin-left: 0px" type="checkbox"
-                               v-bind:value="author"
-                               v-model="addedAuthors">
-                        <h6 style="display: inline;">{{author}}</h6>
-                    </div>
-                </div>
-            </div>
-            <br>
-            <label for="authorsCheckbox" style="margin: 20px" th:text="#{select.authors}"></label>
-            <br>
-            <button class="btn btn-warning" style="width: 30%;" @click="changeList" th:text="#{load}"></button>
-        </div>
+        <div th:insert="fragments/filter.html :: filter"></div>
         <!--        books -->
         <div>
             <table style="width: 75%;margin-left:25%; padding-top: 10%; display: table" class="table table-borderless">
